manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:
  namespace:
spec:
  selector:
    # app: k8s101
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
